v1.5 - TBD
NEW:
  Added new items.
  Added 5 new beam emitter type items.
  Added Plasma Generator machine.
   - Deleted the crafting recipe for Plasma that was added in the previous version.
  ReAdded Ring drops, if you have the Curios mod loaded.
   - Added the ability to disable Rings.
  The Dimensional Anchor now works! It protects you from Black Holes, and prevents
    you from traveling to other dimensions!
  Added the Survivor advancement.
  Added more mods to detect:
    Archer's Paradox, Create, CraftTweaker, CoFH Core, Cyclops Core, Ensorcellation,
    Environmental, Environmental Materials, Environmental Tech, Ex Nihilo: Sequentia,
    Integration Foregoing, Integrated Dynamics, Integrated Tunnels, Integrated Terminals,
    Inventory Tweaks Renewed, Mouse Tweaks, No Cubes, No Cubes Reloaded, Patchouli,
    The Thermal Series of mods, Tool's Complement, and XNet.
  Added Energy Diagnostics block.
    Attaches to an Energy Network and displays the energy variables of all machines
      on the Energy Network.
    - Only supports a maximum of 16 machines right now.
CHANGED:
  Increased the chance to drop an Unidentified Ring when killing enemy mobs.
  The Dimensional Anchor is now registered as a Curios Charm, if you
    have the Curios mod installed.
FIXED:
  Fixed Unidentified Chainmail armor dropping as often as Gold armor.
  Optimized Lasers:
    - Doesn't use any TileEntities at all, so there should be much less lag.
    - Lasers stay in-world if you log out and get back in again.
    - Lasers beams continue moving even if the Laser is removed.
  Fixed Laser machines counting adjacent lasers even though they weren't attached
    or the proper laser type.



v1.4.2 - June 15, 2022
NEW:
  Added an alternate crafting recipe for the Inverter.
  Added Project E EMC values to Silicon and the Circuit items.
  The drawn ItemStacks in the Portal Control Panel gui now cycle between all
    valid Gem Blocks that can be accepted in the Portal Frames, and also show