@@ -1,15 +1,16 @@
 package addsynth.energy.gameplay.machines.circuit_fabricator;
 
+import addsynth.core.gui.util.GuiSection;
 import addsynth.core.gui.util.GuiUtil;
-import addsynth.core.gui.widgets.WidgetUtil;
 import addsynth.core.gui.widgets.item.IngredientWidgetGroup;
+import addsynth.core.gui.widgets.scrollbar.ItemListEntry;
+import addsynth.core.gui.widgets.scrollbar.ItemListScrollbar;
 import addsynth.core.util.StringUtil;
 import addsynth.energy.ADDSynthEnergy;
-import addsynth.energy.gameplay.EnergyItems;
 import addsynth.energy.gameplay.NetworkHandler;
+import addsynth.energy.gameplay.machines.circuit_fabricator.recipe.CircuitFabricatorRecipes;
 import addsynth.energy.lib.gui.GuiEnergyBase;
 import addsynth.energy.lib.gui.widgets.WorkProgressBar;
-import net.minecraft.client.gui.widget.button.AbstractButton;
 import net.minecraft.entity.player.PlayerInventory;
 import net.minecraft.item.ItemStack;
 import net.minecraft.util.ResourceLocation;
@@ -20,84 +21,73 @@ public final class CircuitFabricatorGui extends GuiEnergyBase<TileCircuitFabrica
   private static final ResourceLocation gui_texture = new ResourceLocation(ADDSynthEnergy.MOD_ID, "textures/gui/circuit_fabricator.png");
 
   private final String selected_text = StringUtil.translate("gui.addsynth_energy.common.selected");
+  private String selected_item;
 
-  private static final ItemStack[] circuit_stack = {
-    new ItemStack(EnergyItems.circuit_tier_1), new ItemStack(EnergyItems.circuit_tier_2),
-    new ItemStack(EnergyItems.circuit_tier_3), new ItemStack(EnergyItems.circuit_tier_4),
-    new ItemStack(EnergyItems.circuit_tier_5), new ItemStack(EnergyItems.circuit_tier_6),
-    new ItemStack(EnergyItems.circuit_tier_7), new ItemStack(EnergyItems.circuit_tier_8)
-  };
-
-  private final WorkProgressBar work_progress_bar = new WorkProgressBar(153, 125, 58, 5, 8, 239);
-
-  private static final int circuit_button_x = 10;
-  private static final int circuit_button_y = 54;
-  private static final int spacing = 2;
+  private final WorkProgressBar work_progress_bar = new WorkProgressBar(239, 125, 58, 5, 8, 245);
 
   private static final int down_arrow_texture_x = 228;
   private static final int down_arrow_texture_y = 201;
   private static final int up_arrow_texture_x = 228;
   private static final int up_arrow_texture_y = 217;
-  private static final int[] arrow_draw_x = {77, 95, 113, 131};
+  private static final int[] arrow_draw_x = {163, 181, 199, 217};
   private static final int[] arrow_draw_y = {65, 113};
-  private static final int[] ingredient_draw_x = {76, 94, 112, 130, 76, 94, 112, 130};
+  private static final int[] ingredient_draw_x = {162, 180, 198, 216, 162, 180, 198, 216};
   private static final int[] ingredient_draw_y = {48, 48, 48, 48, 122, 122, 122, 122};
   
   private static final IngredientWidgetGroup recipe_ingredients = new IngredientWidgetGroup(8);
   
+  private static final GuiSection item_list_section = GuiSection.box(6, 50, 157, 140);
+  private static final int[] list_entry_y = {50, 68, 86, 104, 122};
+  private final ItemListEntry[] item_list_entries = new ItemListEntry[5];
+  private ItemListScrollbar item_scrollbar;
+  
   public CircuitFabricatorGui(final CircuitFabricatorContainer container, PlayerInventory player_inventory, ITextComponent title){
-    super(221, 233, container, player_inventory, title, gui_texture);
-    tile.updateGui(); // update displayed recipe, in case player opens another Circuit Fabricator
-  }
-
-  private final class CircuitButton extends AbstractButton {
-
-    private final ResourceLocation button_texture = new ResourceLocation(ADDSynthEnergy.MOD_ID, "textures/gui/gui_textures.png");
-    public static final int button_size = 18;
-    private static final int button_texture_size = 36;
-    // private final TileCircuitFabricator tile;
-    // private final ItemStack circuit;
-    private final int circuit_id;
-
-    public CircuitButton(int x, int y, TileCircuitFabricator tile, int circuit_id){
-      super(x, y, button_size, button_size, "");
-      // this.circuit = new ItemStack(EnergyItems.circuit[circuit_id], 1);
-      this.circuit_id = circuit_id;
-    }
-
-    @Override
-    public void renderButton(int p_renderButton_1_, int p_renderButton_2_, float p_renderButton_3_){
-      WidgetUtil.renderButton(this, button_texture, 64, 80, button_size, button_size, button_texture_size, button_texture_size);
-      GuiUtil.drawItemStack(circuit_stack[circuit_id], x+1, y+1);
-    }
-
-    @Override
-    public void onPress(){
-      NetworkHandler.INSTANCE.sendToServer(new ChangeCircuitCraftType(tile.getPos(), circuit_id));
-    }
+    super(317, 239, container, player_inventory, title, gui_texture);
   }
 
   @Override
   protected final void init(){
     super.init();
-    
-    // circuit buttons
-    int x;
-    int y;
-    int circuit_id;
-    for(y = 0; y < 3; y++){
-      for(x = 0; x < 3; x++){
-        circuit_id = x + (y * 3);
-        if(circuit_id < 8){
-          addButton(new CircuitButton(
-            guiUtil.guiLeft + circuit_button_x + (x * (CircuitButton.button_size + spacing)),
-            guiUtil.guiTop  + circuit_button_y + (y * (CircuitButton.button_size + spacing)), this.tile, circuit_id
-          ));
-        }
-      }
+    // construct item list entries
+    int i;
+    for(i = 0; i < 5; i++){
+      item_list_entries[i] = new ItemListEntry(
+        guiUtil.guiLeft + 6,
+        guiUtil.guiTop + list_entry_y[i],
+        item_list_section.width - 12, 18
+      );
+      addButton(item_list_entries[i]);
     }
+    // construct scrollbar
+    item_scrollbar = new ItemListScrollbar(
+      guiUtil.guiLeft + 6 + item_list_section.width - 12,
+      guiUtil.guiTop + item_list_section.y,
+      item_list_section.height,
+      item_list_entries,
+      CircuitFabricatorRecipes.getRecipes()
+    );
+    item_scrollbar.setResponder(this::onItemSelected);
+    addButton(item_scrollbar);
+    
+    // setup data   (I know there's a better way to do this, but it's like this for now.)
+    tile.updateGui(); // update displayed recipe, in case player opens another Circuit Fabricator
+    updateSelectedItem(tile.getRecipeOutput());
   }
 
+  private final void onItemSelected(final ItemStack item, final int index){
+    @SuppressWarnings("null")
+    final String item_name = item.getItem().getRegistryName().toString();
+    NetworkHandler.INSTANCE.sendToServer(new ChangeCircuitFabricatorRecipe(tile.getPos(), item_name));
+    selected_item = StringUtil.translate(item.getTranslationKey());
+  }
+
+  private final void updateSelectedItem(final ItemStack output){
+    selected_item = StringUtil.translate(output.getTranslationKey());
+    item_scrollbar.setSelected(output);
+  }
+
+  /** Called when the player changes the selected recipe on the server side.
+      Only updates the IngredientWidgets drawn ItemStacks.  */
   public static final void updateRecipeDisplay(final ItemStack[][] recipe){
     recipe_ingredients.setRecipe(recipe);
   }
@@ -109,7 +99,7 @@ public final class CircuitFabricatorGui extends GuiEnergyBase<TileCircuitFabrica
 
   @Override
   protected final void drawGuiContainerBackgroundLayer(float partialTicks, int mouseX, int mouseY){
-    guiUtil.draw_background_texture();
+    guiUtil.draw_custom_background_texture(384, 256);
     work_progress_bar.draw(this, tile);
     // draw arrows and ingredients
     final int length = recipe_ingredients.getLength();
@@ -152,10 +142,10 @@ public final class CircuitFabricatorGui extends GuiEnergyBase<TileCircuitFabrica
     guiUtil.draw_title(this.title);
     draw_energy_usage();
     draw_status(tile.getStatus());
-    GuiUtil.draw_text_left(selected_text+": "+tile.getCircuitSelected(), 6, 39);
+    GuiUtil.draw_text_left(selected_text+": "+selected_item, 6, 39);
     // GuiUtil.drawItemStack(circuit_stack[tile.getCircuitID()], 102, 29);
-    GuiUtil.draw_text_center(work_progress_bar.getWorkTimeProgress(), 184, 113);
-    draw_time_left(140);
+    GuiUtil.draw_text_center(work_progress_bar.getWorkTimeProgress(), 270, 113);
+    draw_time_left(145);
   }
 
   @Override
