@@ -1,11 +1,10 @@
 package addsynth.energy.gameplay.machines.circuit_fabricator;
 
+import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import addsynth.core.container.slots.InputSlot;
 import addsynth.core.game.items.ItemUtil;
-import addsynth.core.util.StringUtil;
-import addsynth.core.util.constants.Constants;
-import addsynth.core.util.java.ArrayUtil;
+import addsynth.energy.ADDSynthEnergy;
 import addsynth.energy.gameplay.Config;
 import addsynth.energy.gameplay.EnergyItems;
 import addsynth.energy.gameplay.machines.circuit_fabricator.recipe.CircuitFabricatorRecipe;
@@ -19,33 +18,41 @@ import net.minecraft.inventory.container.INamedContainerProvider;
 import net.minecraft.item.Item;
 import net.minecraft.item.ItemStack;
 import net.minecraft.nbt.CompoundNBT;
+import net.minecraft.util.ResourceLocation;
 import net.minecraft.util.text.ITextComponent;
 import net.minecraft.util.text.TranslationTextComponent;
+import net.minecraftforge.registries.ForgeRegistries;
 
 public final class TileCircuitFabricator extends TileStandardWorkMachine implements INamedContainerProvider {
 
-  private int circuit_id = -1;
+  @Nonnull // It's better to keep this as a string, so we can save and load it no problem.
+  private String output_itemStack = "";
   private ItemStack[][] filter = new ItemStack[8][];
 
   private final InputSlot[] input_slot = {
-    new InputSlot(this, 0,  76, 76),
-    new InputSlot(this, 1,  94, 76),
-    new InputSlot(this, 2, 112, 76),
-    new InputSlot(this, 3, 130, 76),
-    new InputSlot(this, 4,  76, 94),
-    new InputSlot(this, 5,  94, 94),
-    new InputSlot(this, 6, 112, 94),
-    new InputSlot(this, 7, 130, 94)
+    new InputSlot(this, 0, 162, 76),
+    new InputSlot(this, 1, 180, 76),
+    new InputSlot(this, 2, 198, 76),
+    new InputSlot(this, 3, 216, 76),
+    new InputSlot(this, 4, 162, 94),
+    new InputSlot(this, 5, 180, 94),
+    new InputSlot(this, 6, 198, 94),
+    new InputSlot(this, 7, 216, 94)
   };
+
+  private static final String legacyNBTSaveTag = "Circuit to Craft";
+  private static final String saveTag = "Recipe";
+  @SuppressWarnings("null")
+  private static final String defaultRecipe = EnergyItems.circuit_tier_1.getRegistryName().toString();
 
   public TileCircuitFabricator(){
     super(Tiles.CIRCUIT_FABRICATOR, 8, null, 1, Config.circuit_fabricator_data);
     inventory.setRecipeProvider(CircuitFabricatorRecipes.INSTANCE);
   }
 
-  public final void change_circuit_craft(final int circuit_id){
-    if(this.circuit_id != circuit_id){
-     this.circuit_id = circuit_id;
+  public final void change_recipe(final String new_recipe){
+    if(output_itemStack.equals(new_recipe) == false){
+     output_itemStack = new_recipe;
      rebuild_filters();
      changed = true;
     }
@@ -53,10 +60,9 @@ public final class TileCircuitFabricator extends TileStandardWorkMachine impleme
 
   // TODO: Ideally, this should be rebuilt every recipe and tag reload, but this is the best I can do for now.
   public final void rebuild_filters(){
-    // select ItemStack based on circuit ID.
-    final ItemStack output = new ItemStack(EnergyItems.circuit[circuit_id], 1);
     // find recipe
-    final CircuitFabricatorRecipe recipe = CircuitFabricatorRecipes.INSTANCE.find_recipe(output);
+    final ResourceLocation recipe_id = new ResourceLocation(output_itemStack);
+    final CircuitFabricatorRecipe recipe = CircuitFabricatorRecipes.INSTANCE.find_recipe(recipe_id);
     // get ingredients, create filters
     filter = recipe.getItemStackIngredients();
     int i;
@@ -93,28 +99,45 @@ public final class TileCircuitFabricator extends TileStandardWorkMachine impleme
     }
   }
 
+  public final ItemStack getRecipeOutput(){
+    return new ItemStack(ForgeRegistries.ITEMS.getValue(new ResourceLocation(output_itemStack)));
+  }
+
   @Override
   public final CompoundNBT write(final CompoundNBT nbt){
     super.write(nbt);
-    nbt.putInt("Circuit to Craft", circuit_id >= 0 ? circuit_id : 0);
+    nbt.putString(saveTag, output_itemStack);
     return nbt;
   }
 
   @Override
+  @SuppressWarnings("null")
   public final void read(final CompoundNBT nbt){
     super.read(nbt);
-    // this runs with a default value of 0 if the key doesn't exist. That's perfect.
-    change_circuit_craft(nbt.getInt("Circuit to Craft"));
-  }
-
-  public final String getCircuitSelected(){
-    if(onClientSide()){
-      if(ArrayUtil.isInsideBounds(circuit_id, EnergyItems.circuit)){
-        return StringUtil.translate(EnergyItems.circuit[circuit_id].getTranslationKey());
-      }
-      return Constants.null_error;
+    
+    // handle old saves
+    if(nbt.contains(legacyNBTSaveTag)){
+      final int circuit = nbt.getInt(legacyNBTSaveTag);
+      change_recipe(EnergyItems.circuit[circuit].getRegistryName().toString());
+      return;
     }
-    return "";
+    
+    // handle new saves
+    final String recipe = nbt.getString(saveTag);
+    // handle if tag doesn't exist
+    if(recipe.equals("")){
+      change_recipe(defaultRecipe);
+      return;
+    }
+    // handle if recipe doesn't exist
+    if(CircuitFabricatorRecipes.INSTANCE.find_recipe(new ResourceLocation(recipe)) == null){
+      ADDSynthEnergy.log.warn("Circuit Fabricator recipe for "+recipe+" doesn't exist anymore.");
+      // PRIORITY: add a resetMachine() function. Add a call here. Check how we currently handle unexpected machine state errors.
+      change_recipe(defaultRecipe);
+      return;
+    }
+    // load normally
+    change_recipe(recipe);
   }
 
   public final InputSlot[] getInputSlots(){
